--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/history": "^5.0.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "bootstrap": "^5.1.3",
-    "react": "^18.0.0",
+    "history": "^5.3.0",
+    "jest": "^27.5.1",
+    "react": "^17.0.0",
     "react-bootstrap": "^2.2.2",
-    "react-dom": "^18.0.0",
+    "react-dom": "^17.0.0",
     "react-redux": "^7.2.8",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "redux-saga": "^1.1.3",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
