--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/redux-mock-store": "^1.0.3",
     "bootstrap": "^5.1.3",
     "history": "^5.3.0",
     "jest": "^27.5.1",
@@ -21,6 +22,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3",
