--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
+    "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^17.0.14",
     "@types/redux-mock-store": "^1.0.3",
     "bootstrap": "^5.1.3",
